<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="user"
            type="com.hocrox.worldwidecdln.databinding.LoginModels" />

        <variable
            name="handlers"
            type="com.hocrox.worldwidecdln.authentication.SignActivity" />

    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_back"
        android:orientation="vertical"
        tools:context="com.hocrox.worldwidecdln.authentication.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/app_logo_large" />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/adding"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <com.hocrox.worldwidecdln.utils.CustomEditText
                android:id="@+id/etConfirmEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:background="@drawable/white_rectangle"
                android:hint="@string/yourEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"

                android:padding="14dp"
                android:singleLine="true"
                android:text="@={user.email}"

                android:textColorHint="@color/colorgreytext"
                android:textSize="14sp" />


            <com.hocrox.worldwidecdln.utils.CustomEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_rectangle"
                android:hint="@string/yourPassword"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="14dp"

                android:singleLine="true"
                android:text="@={user.password}"

                android:textColorHint="@color/colorgreytext"
                android:textSize="14sp" />


            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="13dp"
                android:text="@string/remeberMe"
                android:textColor="@color/colorWhite"
                app:buttonTint="@color/colorWhite" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/button_modification"
                android:onClick="@{()->handlers.loginMe(user)}"
                android:text="@string/login"

                android:textColor="@color/colorWhite"
                android:textSize="12sp" />





            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/forgotpassword"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>
</layout>

