<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colormidgrey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="@color/ColorblackText"
                    android:textSize="15sp" />

                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="$0.00"

                    android:textColor="@color/ColorblackText"
                    android:textSize="15sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.hocrox.worldwidecdln.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/workVehicle"
                        android:textColor="@color/ColorblackText" />


                    <com.hocrox.worldwidecdln.utils.CustomTextView
                        android:id="@+id/tvVehicles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/textview_modification"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/myvehicle"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.hocrox.worldwidecdln.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/vehicleCapacity"
                        android:textColor="@color/ColorblackText" />


                    <com.hocrox.worldwidecdln.utils.CustomTextView
                        android:id="@+id/tvAddItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/textview_modification"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/aDDITEMS"
                        android:textColor="@color/colorWhite" />


                </LinearLayout>


            </LinearLayout>
            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/tvSelelctedItems"
                android:text="@string/workStatus"
                android:textColor="@color/ColorblackText"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="25dp"
                android:background="@color/colormidgrey" />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/onlystroke_rectangle"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/workStatus"
                android:textColor="@color/ColorblackText"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:id="@+id/tvGpsLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/textview_modification"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="USE MY GPS LOCATION"
                    android:textColor="@color/colorWhite" />


                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:id="@+id/tvInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/textview_modification"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="INFO"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:id="@+id/tvOnDuty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/textview_modification"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/goonDuty"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:id="@+id/tvStartPur"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@drawable/textview_modification"
                    android:gravity="center"
                    android:padding="10dp"

                    android:text="@string/startPur"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:id="@+id/tvPostedTrips"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/textview_modification"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/postedTrips"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:id="@+id/tvmySchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/textview_modification"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/mySchedule"
                    android:textColor="@color/colorWhite" />


                <com.hocrox.worldwidecdln.utils.CustomTextView
                    android:id="@+id/tvStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/textview_modification"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:text="@string/start"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>