<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.hocrox.worldwidecdln.inventory.InventoryHomeActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/leftarrow" />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/ivBackArrow"
                android:gravity="center_horizontal"
                android:text="My Inventory"
                android:id="@+id/tv_toolbar"
                android:textColor="@color/ColorblackText" />


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_height="2dp"/>
    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>
