<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="400dp">
<com.hocrox.worldwidecdln.utils.CustomTextView
    android:layout_width="match_parent"
    android:gravity="center"
    android:paddingTop="10dp"
    android:id="@+id/tvName"
    android:paddingBottom="10dp"
    android:textColor="@color/ColorblackText"
    android:text="@string/selectCategory"

    android:layout_height="wrap_content">

</com.hocrox.worldwidecdln.utils.CustomTextView>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/text_chat"
      />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rl_category"
        android:layout_marginTop="3dp"

        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
