...
            android:textColor="@color/ColorblackText"
            android:textSize="14sp" />



        <com.hocrox.worldwidecdln.utils.CustomTextView
            android:id="@+id/tvSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_modification"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
...
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp"

        android:id="@+id/rl_posts"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>

