<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/ivClose"
        android:background="@drawable/ic_close_black_24dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/ll_root"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

    </LinearLayout>
    <com.hocrox.worldwidecdln.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="12dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="12dp"
        android:id="@+id/tvName"
        android:textColor="@color/colorWhite"
        android:background="@drawable/textview_modification"
        />


</LinearLayout>
