...
                android:text="@string/cheboxnotshown"
                android:gravity="center"
                android:textColor="@color/ColorblackText"
        />

            <com.hocrox.worldwidecdln.utils.CustomTextView
                android:id="@+id/tvStart"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"
                android:paddingLeft="55dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"

...
